1999-08-24  Nick Clifton  <nickc@cygnus.com>

	From a patch submitted by Roland McGrath  <roland@baalperazim.frob.com>

	* configure.tgt (arm-*-netbsd*): New target.
	* Makefile.am (ALL_EMULATIONS): Add earmnbsd.o.
	(earmnbsd.c): New rule with deps.
	* Makefile.on: Regenerate.
	* emulparams/armnbsd.sh: New file.

1999-08-23  Nick Clifton  <nickc@cygnus.com>

	* emulparams/elf32mcore.sh (PARSE_AND_LIST_ARGS): Define.
	Implement --base-file command line switch.

	* emultempl/elf32.em: Add ability for individual targets to have
	their own command line switches by defining PARSE_AND_LIST_ARGS.

1999-08-19  Andreas Schwab  <schwab@suse.de>

	* configure.host: Use ${CC} instead of gcc for finding compiler
	related files.

1999-08-11  Nick Clifton  <nickc@cygnus.com>

	* scripttempl/mcorepe.sc (OUTPUT_FORMAT): Fix typo.

1999-08-09  Mark Elbrecht  <snowball3@bigfoot.com>

	* scripttempl/i386go32.sc: Handle g++ exception sections.

1999-08-09  Ian Lance Taylor  <ian@zembu.com>

	From Wally Iimura <iimura@microunity.com>:
	* ldlang.c (lang_size_sections): When checking whether an address
	is within a region, don't get confused by wrapping around at the
	end of the address space.

1999-08-08  Ian Lance Taylor  <ian@zembu.com>

	* ldlang.c (wild_doit): Update for renaming of SEC_SHORT to
	SEC_SMALL_DATA.

	* Makefile.am: Rename .dep* files to DEP*.  Change DEP variable to
	MKDEP.  Rebuild dependencies.
	* Makefile.in: Rebuild.

1999-08-08  Jakub Jelinek  <jj@ultra.linux.cz>

	* configure.host (sparc-*-linux-gnu*): New host.
	(sparc64-*-linux-gnu*): New host.

1999-08-06  Ian Lance Taylor  <ian@zembu.com>

	* lexsup.c (is_num): Reindent.
	(parse_args): Mention program name in error message.

	* emultempl/ostring.sed: Rename from stringify.sed.
	* emultempl/astring.sed: New file.
	* Makefile.am (stringify.sed): New target.
	(GEN_DEPENDS): Change $(srcdir)/emultempl/stringify.sed to
	stringify.sed.
	* configure.in: Define and substitute STRINGIFY.