@@ -7,7 +7,7 @@ TEXT_START_ADDR=0x8000
 TEMPLATE_NAME=armelf
 OTHER_TEXT_SECTIONS='*(.glue_7t) *(.glue_7)'
 OTHER_BSS_SYMBOLS='__bss_start__ = .;'
-OTHER_BSS_END_SYMBOLS='_bss_end__ = . ; __bss_end__ = . ;'
+OTHER_BSS_END_SYMBOLS='_bss_end__ = . ; __bss_end__ = . ; __end__ = . ;'
 
 GENERATE_SHLIB_SCRIPT=yes
 
